// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expand button on click when short text is provided renders button after text 1`] = `
<span>
  <button
    aria-label="Click to expand text"
    class="btn js-text-expander-prepend text-expander btn-blank btn-default btn-md gl-button"
    style="display: none;"
    type="button"
  >
    <!---->
     
    <!---->
      
    <span
      class="gl-button-text"
    >
      <svg
        aria-hidden="true"
        class="s12 ic-ellipsis_h"
      >
        <use
          xlink:href="#ellipsis_h"
        />
      </svg>
    </span>
  </button>
   
  <!---->
   
  <span>
    <p>
      Expanded!
    </p>
  </span>
   
  <button
    aria-label="Click to expand text"
    class="btn js-text-expander-append text-expander btn-blank btn-default btn-md gl-button"
    style=""
    type="button"
  >
    <!---->
     
    <!---->
      
    <span
      class="gl-button-text"
    >
      <svg
        aria-hidden="true"
        class="s12 ic-ellipsis_h"
      >
        <use
          xlink:href="#ellipsis_h"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`Expand button when short text is provided renders button before text 1`] = `
<span>
  <button
    aria-label="Click to expand text"
    class="btn js-text-expander-prepend text-expander btn-blank btn-default btn-md gl-button"
    type="button"
  >
    <!---->
     
    <!---->
      
    <span
      class="gl-button-text"
    >
      <svg
        aria-hidden="true"
        class="s12 ic-ellipsis_h"
      >
        <use
          xlink:href="#ellipsis_h"
        />
      </svg>
    </span>
  </button>
   
  <span>
    <p>
      Short
    </p>
  </span>
   
  <!---->
   
  <button
    aria-label="Click to expand text"
    class="btn js-text-expander-append text-expander btn-blank btn-default btn-md gl-button"
    style="display: none;"
    type="button"
  >
    <!---->
     
    <!---->
      
    <span
      class="gl-button-text"
    >
      <svg
        aria-hidden="true"
        class="s12 ic-ellipsis_h"
      >
        <use
          xlink:href="#ellipsis_h"
        />
      </svg>
    </span>
  </button>
</span>
`;
